force-app/main/default/objects/Send_Email_Notification_Post_Sale__mdt/Send_Email_Notification_Post_Sale__mdt.object-meta.xml
<CustomObject>
    <description>This custom metadata type stores email id of user to which email is send post medical product is sold</description>
    <label>Send Email Notification Post Sale</label>
    <pluralLabel>Send Email Notification Post Sales</pluralLabel>
</CustomObject>