force-app/main/default/objects/Send_Email_Notification_Post_Sale__mdt/fields/CDD_Email_ID__c.field-meta.xml
<CustomField>
    <fullName>CDD_Email_ID__c</fullName>
    <label>CDD Email ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>