force-app/main/default/objects/Send_Email_Notification_Post_Sale__mdt/fields/Owner_Email_id__c.field-meta.xml
<CustomField>
    <fullName>Owner_Email_id__c</fullName>
    <label>CD SVP Email id</label>
    <type>Email</type>
</CustomField>