force-app/main/default/objects/Send_Email_Notification_Post_Sale__mdt/fields/Owner_Name__c.field-meta.xml
<CustomField>
    <fullName>Owner_Name__c</fullName>
    <label>CD SVP Name</label>
    <type>TextArea</type>
</CustomField>