force-app/main/default/objects/Send_Email_Notification_Post_Sale__mdt/fields/SC_Email_Id__c.field-meta.xml
<CustomField>
    <fullName>SC_Email_Id__c</fullName>
    <label>SC Email Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>