force-app/main/default/objects/Send_Email_Notification_Post_Sale__mdt/fields/To_User__c.field-meta.xml
<CustomField>
    <fullName>To_User__c</fullName>
    <label>CDD User</label>
    <length>255</length>
    <type>Text</type>
</CustomField>