force-app/main/default/objects/Send_Email_Notification_Post_Sale__mdt/listViews/New_Layout.listView-meta.xml
<ListView>
    <fullName>New_Layout</fullName>
    <columns>MasterLabel</columns>
    <columns>To_User__c</columns>
    <columns>CDD_Email_ID__c</columns>
    <columns>Owner_Name__c</columns>
    <columns>Owner_Email_id__c</columns>
    <columns>SC_Email_Id__c</columns>
    <filterScope>Everything</filterScope>
    <label>New Layout</label>
</ListView>